--- a/PERSONAL PORTFOLIO.CSS
+++ b/PERSONAL PORTFOLIO.CSS
@@ -59,7 +59,7 @@ nav ul li a::after{
     content: "";
     width:0;
     height:3px;
-    background: cyan;
+    background: rgb(0, 248, 95);
     position:absolute;
     left:0;
     bottom:-6px;
@@ -80,19 +80,20 @@ nav ul li a:hover::after{
 }
 
 .header-text p{
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     margin: 0;
-    color: cyan;
+    color: rgb(0, 255, 64);
     font-weight: 900;
+    margin-top: 10%;
 }
 .header-text h1{
-    font-size:3.5rem;
-    margin-top: 15%;
+    font-size:2.5rem;
+    margin-top:10%;
     
 }
 
 .header-text h1 span{
-    color:cyan;
+    color:rgb(10, 240, 29);
 
 }
 
@@ -165,7 +166,7 @@ justify-content: space-between;
     content: "";
     width: 0;
     height: 3px;
-    background: cyan;
+    background: rgb(43, 255, 0);
     position: absolute;
     left:0;
     bottom:-8px;
@@ -182,7 +183,7 @@ justify-content: space-between;
 }
 
 .tab-contents ul li span{
-    color: cyan;
+    color: rgb(75, 247, 8);
     font-size: 0.80rem;
 
                             
@@ -243,7 +244,7 @@ justify-content: space-between;
 }
 
 .services-list div:hover{
-    background: cyan;
+    background: rgb(38, 141, 47);
     transform: translateY(-10px);
 
 }
@@ -281,7 +282,7 @@ padding:50px 0 ;
 .layer{
    width: 100%;
    height:0%;
-   background: linear-gradient(rgba(0,0,0,0.6),cyan);
+   background: linear-gradient(rgba(0,0,0,0.6),rgb(101, 180, 26));
    border-radius: 10px;
    position: absolute;
    left:0;
@@ -305,7 +306,7 @@ padding:50px 0 ;
 
 .layer a{
     margin-top: 20px;
-    color: cyan;
+    color: rgb(21, 199, 30);
     background: #fff;
     text-decoration: none;
     font-size: 18px;
@@ -329,7 +330,7 @@ padding:50px 0 ;
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid cyan;
+    border: 1px solid rgb(34, 175, 53);
     padding: 14px 60px;
     border-radius: 6px;
     text-decoration: none;
@@ -338,7 +339,7 @@ padding:50px 0 ;
 }
 
 .btn:hover{
-    background: cyan;
+    background: rgb(43, 192, 23);
 }
 
 /*-----------------------------contact--------------------------*/
@@ -357,7 +358,7 @@ padding:50px 0 ;
 
 .contact-left p i{
     margin-right: 15px;
-    color: cyan;
+    color: rgb(66, 194, 40);
     font-size: 25px;
 }
 
@@ -374,7 +375,7 @@ padding:50px 0 ;
 }
 
 .social-icons a:hover{
-      color: cyan;
+      color: rgb(45, 187, 52);
       transform: translateY(-5px);
       transition: transform 0.5s;
 
@@ -382,7 +383,7 @@ padding:50px 0 ;
 
 .btn.btn2{
     display: inline-block;
-    background: cyan;
+    background: rgb(20, 177, 28);
 }
 
 .contact-right form{
@@ -428,11 +429,11 @@ form .btn2{
 
 @media only screen and (max-width:640px){
     .header-text{
-        margin-top: 100%;
+        margin-top:40%;
         font-size: 16px;
     }
     .header-text p{
-        margin-top: 
+        margin-top:-1rem;
     }
     .header-text h1{
         font-size: 30px;
@@ -444,7 +445,7 @@ form .btn2{
 
     }
      nav ul{
-        background: cyan;
+        background: rgb(79, 192, 27);
         position: fixed;
         top: 0;
         right:-200px;
@@ -502,5 +503,4 @@ form .btn2{
     display: block;
 
 }
-
 
